--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#8c52ff" />
     <link rel="manifest" href="/manifest.json" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png" />
-    <link rel="apple-touch-icon" href="/assets/apple-touch-icon.png" />
+    <!-- Favicons -->
+    <link rel="icon" type="image/png" href="/assets/logo.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/logo.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/logo.png" />
+    <link rel="apple-touch-icon" href="/assets/logo.png" />
     
     <!-- Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
@@ -20,7 +22,7 @@
         cookie_flags: 'SameSite=None;Secure'
       });
     </script>
-    <title>Build it Yourself - AI-Powered Custom Motorcycle Designer</title>
+    <title>Build it Yourself</title>
     
     <!-- SEO Meta Tags -->
     <meta name="description" content="Design your dream motorcycle with AI assistance. Create custom bikes with professional guidance and real-time visualization." />
