--- a/frontend/index.html
+++ b/frontend/index.html
@@ -72,6 +72,10 @@
     </script>
     
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+    
+    <!-- Google AdSense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8965703417902528"
+     crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root"></div>
